--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar bg-info" data-bs-theme="dark">
       <div class="container">
-        <a class="navbar-brand" href="/">Git Guide</a>
+        <a class="navbar-brand" href="/git-guide">Git Guide</a>
       </div>
     </nav>
 
